# meshflow

./: .gitignore  .readthedocs.yaml  README.md  config.toml  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  example.rst  index.rst  usage.rst
examples/: example_setup.ipynb  example_setup.py
examples/.virtual_documents/example-setup-python/: meshflow_bow_at_calgary.ipynb
examples/bow-at-calgary-attributes/: bcalgary_NA_NALCMS_landcover_2020_30m.tif  bcalgary_stats_NA_NALCMS_landcover_2020_30m.csv
examples/bow-at-calgary-forcings/: averaged_remapped_bcalgary_1980010112.nc  averaged_remapped_bcalgary_1980010212.nc  averaged_remapped_bcalgary_1980010312.nc  averaged_remapped_bcalgary_1980010412.nc  averaged_remapped_bcalgary_1980010512.nc  averaged_remapped_bcalgary_1980010612.nc  averaged_remapped_bcalgary_1980010712.nc  averaged_remapped_bcalgary_1980010812.nc  averaged_remapped_bcalgary_1980010912.nc
examples/bow-at-calgary-obs/: HYDAT_access.ipynb
examples/bow-at-calgary-shapefiles/: bcalgary_rivers.dbf  bcalgary_rivers.shp  bcalgary_rivers.shx  bcalgary_subbasins.dbf  bcalgary_subbasins.shp  bcalgary_subbasins.shx
examples/example-setup-python/: meshflow_bow_at_calgary-grouping.ipynb  meshflow_bow_at_calgary-nogrouping.ipynb  meshflow_bow_at_calgary.ipynb  test.nc
src/meshflow/: __init__.py  _default_attrs.py  _default_dicts.py  core.py  main.py
src/meshflow/cli/: main.py
src/meshflow/default_settings/: MESH_parameters.txt  outputs_balance.txt  readme
src/meshflow/templates/: MESH_input_run_options.ini.jinja  MESH_parameters_CLASS.ini.jinja  MESH_parameters_hydrology.ini.jinja  aliases.py  default_CLASS_case.json  default_CLASS_heading.json  default_CLASS_lines.json  default_CLASS_parameters.json  default_CLASS_types.json  default_hydrology_parameters.json  default_input_run_options.json  default_parameters.json  default_process_parameters.json  test.ini
src/meshflow/utility/: __init__.py  _default_lists.py  default_parameters_attrs.py  forcing.py  forcing_prep.py  geom.py  network.py  observations.py  templating.py  utils.py
tests/: Test workflow.ipynb  parameter_templating.ipynb  parameter_templating_funccalls.ipynb  test_workflow.py  update_nested_dicts.ipynb
